--- a/frontend/my-app/public/index.html
+++ b/frontend/my-app/public/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>React App</title>
+
+    <head>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
+    </head>
   </head>
   <body>
     <div id="root"></div>
